more complete implementation, now works with bugs

--- a/src/persianDateSelector.html
+++ b/src/persianDateSelector.html
@@ -55,7 +55,7 @@
             <td colspan="2">{{activeInfo.year}}</td>-->
         </tr>
         <tr>
-            <td colspan="7" ng-click="goToday(now)">امروز : {{now[0]}}/{{now[1]}}/{{now[2]}}</td>
+            <td colspan="7" ng-click="goToDay(now)">امروز : {{now[0]}}/{{now[1]}}/{{now[2]}}</td>
         </tr>
     </table>
 </div>
