--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="../lib/calendar.js"></script>
+    <script src="../lib/astro.js"></script>
     <script src="../lib/jquery.min.js"></script>
     <script src="../lib/angular.min.js"></script>
     <script src="../lib/ui-bootstrap-tpls-1.3.2.min.js"></script>
