--- a/src/persianDateSelector.html
+++ b/src/persianDateSelector.html
@@ -6,9 +6,7 @@
     </style>
     <table border="1" dir="rtl" cellpadding="0" cellspacing="0">
         <tr>
-            <td title="بعدی" class="arrow" ng-click="nextYear(year);">
-                <img src="../Content/datepicker/Arrow-Right.png" />
-            </td>
+            <td title="بعدی" class="arrow" ng-click="nextYear(year);"></td>
             <td colspan="5">
                 {{activeInfo.year}}
                 <!--<span uib-dropdown on-toggle="toggled(open)">
@@ -20,18 +18,12 @@
                     </ul>
                 </span>-->
             </td>
-            <td title="قبلی" class="arrow" ng-click="previousYear(year);">
-                <img src="../Content/datepicker/Arrow-Left.png" />
-            </td>
+            <td title="قبلی" class="arrow" ng-click="previousYear(year);"></td>
         </tr>
         <tr>
-            <td class="arrow" title="بعدی" ng-click="nextMonth(month);">
-                <img src="../Content/datepicker/Arrow-Right.png" />
-            </td>
+            <td class="arrow" title="بعدی" ng-click="nextMonth(month);"></td>
             <td colspan="5">{{MonthName}}</td>
-            <td class="arrow" title="قبلی" ng-click="previousMonth(month)">
-                <img src="../Content/datepicker/Arrow-Left.png" />
-            </td>
+            <td class="arrow" title="قبلی" ng-click="previousMonth(month)"></td>
         </tr>
         <tr>
             <th>ش</th>
